--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
   "dependencies": {
     "body-parser": "^1.11.0",
     "express": "~4.11.2",
-    "jade": "~1.9.1",
-    "level": "~0.18.0",
-    "level-sublevel": "~6.4.4"
+    "jade": "~1.9.1"
   },
   "scripts": {
     "start": "node bin/www",
