--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "gin",
   "version": "0.0.0",
-  "description": "learning stuff",
+  "description": "Daily UI",
   "authors": [
     "Jarvis Chen"
   ],
@@ -19,11 +19,10 @@
     "fontawesome": "~4.3.0",
     "bootstrap": "~3.3.2",
     "angular": "~1.3.12",
-    "angular-animate": "~1.3.12",
     "angular-route": "~1.3.12",
-    "angular-resource": "~1.3.12",
     "angular-mocks": "~1.3.12",
-    "seajs": "~2.3.0",
-    "requirejs": "~2.1.15"
+    "foundation": "~5.5.1",
+    "react": "~0.13.1",
+    "backbone": "~1.1.2"
   }
 }
