--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gulp": "^3.8.11",
     "karma": "~0.12.31",
     "karma-chrome-launcher": "~0.1.7",
-    "karma-firefox-launcher": "~0.1.4"
+    "karma-firefox-launcher": "~0.1.4",
+    "koa-router": "^4.3.2"
   },
   "dependencies": {
     "jade": "~1.9.1",
