--- a/package.json
+++ b/package.json
@@ -2,15 +2,11 @@
   "version": "0.0.0",
   "name": "gin",
   "description": "Daily UI",
-  "repository": "http://github.com/jchens/gin.git",
+  "repository": "http://github.com/mrmingii/gin.git",
   "devDependencies": {
-    "chai": "^2.2.0",
-    "connect-livereload": "^0.5.3",
     "gulp": "^3.8.11",
-    "gulp-connect": "^2.2.0",
-    "gulp-mocha": "^2.0.1",
-    "gulp-watch": "^4.2.4",
-    "supertest": "^0.15.0"
+    "gulp-clean": "^0.3.1",
+    "gulp-connect": "^2.2.0"
   },
   "dependencies": {
     "jade": "^1.9.2",
@@ -20,7 +16,7 @@
     "koa-views": "^3.0.0"
   },
   "scripts": {
-    "start": "node --harmony app.js 3000",
-    "test": "grunt test --stack"
-  }
+    "start": "node --harmony `which gulp`"
+  },
+  "license": "MIT"
 }
